<resources>
    <string name="app_name">BookHUB</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourite">Favourite</string>
    <string name="searchAnything">Search</string>
    <string name="aboutapp">About App</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="favourite_fragment">favourite fragment</string>
    <string name="profile_fragment">profile fragment</string>
    <string name="aboutapp_fragment">This is a sample E-book App.
    Here, you can search for books, mark them your favourite, add in your library, sometimes get a preview also.
    Or select any book from the best selling section.</string>
    <string name="just_a_list">BookName</string>
    <string name="rating">_</string>
    <string name="name_of_author">Name of author</string>
    <string name="price">price</string>
    <string name="internet_connectivity">Internet Connectivity</string>
    <string name="about_book">About Book</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="sample_text">Sample Text</string>
    <string name="bookname">BookName</string>
    <string name="authorname">AuthorName</string>
    <string name="book_image">BookImage</string>
    <string name="search">Search</string>
    <string name="add_to_library">Add to Library</string>
    <string name="bookcover">BookCover</string>
    <string name="search_book_text">What do you want to find?</string>
    <string name="search_hint">Enter anything</string>
    <string name="fetch">Fetch</string>
    <string name="description">Description</string>
    <string name="delete">delete</string>
</resources>
