<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="5dp"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/detailCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageView
            android:id="@+id/imgBookImage"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="1.1"
            android:contentDescription="@string/book_image"
            android:scaleType="centerCrop"
            android:src="@drawable/book_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:orientation="vertical"
            android:padding="8dp"
            android:paddingStart="9dp"
            android:paddingEnd="1dp">


            <TextView
                android:id="@+id/txtbookname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/bookname"
                android:textColor="@color/black"
                android:textSize="18sp"
                tools:text="something really really long and long" />


            <TextView
                android:id="@+id/txtauthorname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/name_of_author"
                android:textSize="16sp"
                tools:text="something really really long and long" />

            <TextView
                android:id="@+id/txtprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/price_green"
                android:textSize="15sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/txtbookrating"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:layout_weight=".6"
            android:textColor="@color/star_yellow"
            app:drawableLeftCompat="@drawable/ic_star_black_24dp"
            tools:text="@string/rating" />
    </LinearLayout>
</androidx.cardview.widget.CardView>