<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="cursive"
            android:text="@string/search_book_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtBookInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/search_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/btnfetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fetch" />

        <ProgressBar
            android:id="@+id/searchProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>
</ScrollView>
